smoother guest adding replacing modal with separate page

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -267,8 +267,8 @@ template(name='email_validation_check')
             i.checkmark.icon
             |email validated
     else
-        .ui.orange.circular.basic.large.button.send_verification
-            i.ban.icon
+        .ui.circular.basic.large.button.send_verification
+            //- i.ban.icon
             |email unvalidated
         if times
             .ui.basic.circular.label
@@ -291,34 +291,33 @@ template(name='rules_and_regs_check')
             |click to sign rules and regulationss 
     else
         if is_admin
-            a.ui.circular.large.green.basic.button(href="/m/rules_regs_signing/#{rules_signed._id}/view")
+            a.ui.circular.large.basic.button(href="/m/rules_regs_signing/#{rules_signed._id}/view")
                 i.signature.icon
                 |rules and regs signed 
         else if is_staff
-            .ui.large.circular.green.basic.button
+            .ui.large.circular.basic.button
                 i.signature.icon
                 |rules and regs signed 
                 
 template(name='member_waiver_check')
-    unless waiver_signed
-        .ui.large.circular.basic.red.button.sign_rules
-            i.signature.icon
-            |click to sign member waiver 
-    else
-        if is_admin
-            a.ui.circular.large.green.basic.button(href="/m/rules_regs_signing/#{rules_signed._id}/view")
-                i.signature.icon
-                |member waiver signed 
+    //- unless waiver_signed
+    //-     .ui.large.circular.basic.red.button.sign_rules
+    //-         i.signature.icon
+    //-         |member waiver not signed 
+    //- else
+    .ui.circular.large.basic.button
+        i.signature.icon
+        |member waiver signed 
         
 template(name='resident_key_check')
-    unless key_on_file
-        .ui.large.circular.basic.orange.button
-            i.ban.icon
-            |key not on file 
-    else
-        .ui.circular.large.basic.button
-            i.key.icon
-            |key on file 
+    //- unless key_on_file
+    //-     .ui.large.circular.basic.orange.button
+    //-         i.ban.icon
+    //-         |key not on file 
+    //- else
+    .ui.circular.large.basic.button
+        i.key.icon
+        |key on file 
         
         
 template(name='guest_waiver_check')
