--- a/client/signatures.jade
+++ b/client/signatures.jade
@@ -8,7 +8,7 @@ template(name='rules_signing')
             else
                 i.huge.circle.outline.grey.icon.agree
         if agree
-            .ui.header please sign below
+            .ui.header Sign Below
             if signature_saved
                 +signature_view key='signature' direct=true
                 i.pencil.circular.large.icon.edit_signature
@@ -16,5 +16,32 @@ template(name='rules_signing')
                 +signature_edit key='signature' direct=true
             if signature_saved
                 .ui.big.circular.blue.fluid.button.submit_rules
-                    |submit
+                    | Submit
+                    i.right.chevron.icon
+
+
+
+template(name='add_guest')
+    with new_guest_doc
+        .ui.circular.basic.button.cancel_new_guest
+            i.left.chevron.icon
+        +document_view key='guest_waiver'
+        +user_card resident
+        +text_edit key='first_name' label='First Name' direct=true
+        +text_edit key='last_name' label='Last Name' direct=true
+        .ui.header I agree to the Guest Waiver Terms
+            if agree
+                i.huge.checkmark.green.link.icon.agree
+            else
+                i.huge.circle.outline.grey.icon.agree
+        if agree
+            .ui.header Sign Below
+            if signature_saved
+                +signature_view key='signature' direct=true
+                i.pencil.circular.large.icon.edit_signature
+            else
+                +signature_edit key='signature' direct=true
+            if signature_saved
+                .ui.big.circular.blue.fluid.button.submit_guest
+                    | Submit
                     i.right.chevron.icon
