--- a/client/staff.jade
+++ b/client/staff.jade
@@ -1,50 +1,53 @@
 template(name='staff')
     h1.ui.center.aligned.grey.header 
-        +i name='user shield'
-        |staff
+        //- +i name='user shield'
+        i.shield.grey.icon
+        |Staff
+    .ui.center.aligned.basic.segment
+        a.ui.big.circular.basic.button(href='/add_resident')
+            i.user.shield.large.icon
+            | Add Resident
+        
     .ui.inline.header
         |#{checkedin_members.count} checked in members
     .ui.doubling.centered.cards
         each checkedin_members
             +big_user_card username
-    .ui.center.aligned.basic.segment
-        a.ui.big.circular.basic.button(href='/add_resident')
-            i.user.shield.icon
-            | add resident
         
-    .ui.stackable.padded.grid
-        .three.column.row
-            //- .column
-            //-     +task_widget
-            .column
-                +wywo
-            .column
-    //- .ui.header current health club checked in
-    //- each active_healthclub_sessions
-    //-     .ui.header this
-    //- .ui.header current court keys checked out
-    //- each court_key_sessions
-    //-     .ui.header this
-    //- .ui.header checklist reminders
-    //- each court_key_sessions
-    //-     .ui.header this
-    
-    .ui.header notes/work orders
-    +add_button model='work_order'
-    .ui.header communication log
-    +add_button model='communication'
+    //- .ui.stackable.padded.grid
+    //-     .three.column.row
+    //-         //- .column
+    //-         //-     +task_widget
+    //-         .column
+    //-             +wywo
+    //-         .column
+    //- //- .ui.header current health club checked in
+    //- //- each active_healthclub_sessions
+    //- //-     .ui.header this
+    //- //- .ui.header current court keys checked out
+    //- //- each court_key_sessions
+    //- //-     .ui.header this
+    //- //- .ui.header checklist reminders
+    //- //- each court_key_sessions
+    //- //-     .ui.header this
+    //- 
+    //- .ui.header notes/work orders
+    //- +add_button model='work_order'
+    //- .ui.header communication log
+    //- +add_button model='communication'
     //- +model_docs_crud model='communication'
     
     
     //- +schedule
     //- +shift_change_requests
-    +view_chats
+    //- +view_chats
 
 
 template(name='task_widget')
     .ui.smoothed.segment
         .ui.header 
-            +i name='task'
+            //- +i name='task'
+            i.task.icon
             |todos
         //- .ui.fluid.styled.accordion.profile_block
         +goto_model slug='task'
