--- a/client/users.jade
+++ b/client/users.jade
@@ -132,7 +132,8 @@ template(name='users')
         .row
             .sixteen.wide.column
                 h1.ui.center.aligned.grey.header 
-                    +i name='groups'
+                    //- +i name='groups'
+                    i.users.grey.icon
                     |Users
                 .ui.left.icon.huge.fluid.input
                     input.username_search(type='text' placeholder='lookup name...')
